--- a/manifest.json
+++ b/manifest.json
@@ -1,29 +1,28 @@
 {
-  "name" : "Page action by content",
-  "version" : "1.1",
-  "description" : "Shows a page action for HTML pages containing the word 'sandwich'",
+  "name" : "Weblio Exporter",
+  "version" : "1.0",
+  "description" : "Export the word list stored in Weblio",
   "background" : {
     "scripts": ["background.js"]
   },
   "page_action" :
   {
-    "default_icon" : "sandwich-19.png",
-    "default_title" : "There's a 'sandwich' in this page!"
+    "default_icon" :  { "19":  "dictionary-19.png",
+                        "38":  "dictionary-38.png"},
+    "default_title" : "Export the word list"
   },
   "content_scripts" : [
     {
       "matches" : [
-        "http://*/*",
-        "https://*/*"
+        "http://uwl.weblio.jp/word-list"
       ],
       "js" : ["jquery-2.0.0.min.js", "contentscript.js"],
       "run_at" : "document_idle",
       "all_frames" : false
     }
   ],
-  "icons" : {
-    "48" : "sandwich-48.png",
-    "128" : "sandwich-128.png"
-  },
+  "icons": { "16":  "dictionary-16.png",
+             "48":  "dictionary-48.png",
+             "128": "dictionary-128.png" },
   "manifest_version": 2
 }
