--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     "storage"
   ],
   "background" : {
-    "scripts": ["dropbox.min.js", "background.js"]
+    "scripts": ["dropbox.min.js", "util.js", "background.js"]
   },
   "page_action" :
   {
